--- a/src/tw/rmstudio/mt/java/course/mcu/ds/ex1/MainForm.form
+++ b/src/tw/rmstudio/mt/java/course/mcu/ds/ex1/MainForm.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="tw.rmstudio.mt.java.course.mcu.ds.ex1.Main">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="tw.rmstudio.mt.java.course.mcu.ds.ex1.MainForm">
   <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="16" left="16" bottom="16" right="16"/>
     <constraints>
